# BoostChat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  vcpkg.json
assets/: logo
client/: TODO.md
dev/: implementation_plan.md  test_client.cpp  to-do.md
dev/tool/: keycode_check
doc/: boost_chat-server.md
res/: logo
server/: CMakeLists.txt  README.md
server.old/: CMakeLists.txt  README.md
server.old/lib/: CMakeLists.txt  session.hpp
server/app/: CMakeLists.txt  main.cpp
server/include/: logger.hpp
server/lib/: CMakeLists.txt  def.hpp  logger.hpp  message.cpp  message.hpp  server.cpp  server.hpp  session.cpp  session.hpp
server/src/: main.cpp  session.cpp  tester.cpp  tester.hpp
server/src/boost_chat/: def.hpp  logger.cpp  logger.hpp  message.cpp  message.hpp  server.cpp  server.hpp  session.cpp  session.hpp  tester.cpp  tester.hpp
temp/tool/src/: keycode_check.cpp
tests/: color_printing_test.cpp
